fixed bugs and corrected some logic stuff